--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,92 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/checkBox1"
-            android:layout_width="207dp"
-            android:layout_height="115dp"
-            android:text="Tomato" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="3"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
-        <CheckBox
-            android:id="@+id/checkBox2"
-            android:layout_width="206dp"
-            android:layout_height="115dp"
-            android:baselineAligned="false"
-            android:text="Onion" />
+            <CheckBox
+                android:id="@+id/checkBox1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"/>
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="100dp"
+                android:layout_height="2000dp"
+                android:src="@drawable/tomato"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:scaleX="1.2"
+                android:scaleY="1.1"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="3"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <CheckBox
+                android:id="@+id/checkBox2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"/>
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="100dp"
+                android:layout_height="200dp"
+                android:src="@drawable/onion1"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:layout_marginTop="-10dp"
+                android:layout_marginLeft="10dp"
+                android:scaleX="1.3"
+                android:scaleY="1.2"/>
+
+
+        </LinearLayout>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="165dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="35dp"
+            android:paddingTop="-100dp"
+            android:text="Tomato"
+            android:textAlignment="center"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="246dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="45dp"
+            android:paddingTop="-100dp"
+            android:text="Onion"
+            android:textAlignment="center"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +120,7 @@
         android:id="@+id/button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Click"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:text="See Recipes" />
 
 </LinearLayout>
