--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,119 +4,232 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#00A36C"
     tools:ignore="ExtraText">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="3"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <CheckBox
-                android:id="@+id/checkBox1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"/>
-
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="100dp"
-                android:layout_height="2000dp"
-                android:src="@drawable/tomato"
-                android:scaleType="fitCenter"
-                android:adjustViewBounds="true"
-                android:scaleX="1.2"
-                android:scaleY="1.1"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="3"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <CheckBox
-                android:id="@+id/checkBox2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"/>
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="100dp"
-                android:layout_height="200dp"
-                android:src="@drawable/onion1"
-                android:scaleType="fitCenter"
-                android:adjustViewBounds="true"
-                android:layout_marginTop="-10dp"
-                android:layout_marginLeft="10dp"
-                android:scaleX="1.3"
-                android:scaleY="1.2"/>
-
-
-        </LinearLayout>
+        android:layout_height="0dp"
+        android:layout_weight="0.15"
+        android:background="#00A36C"
+        android:orientation="vertical">
 
     </LinearLayout>
 
-    <LinearLayout
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="30dp"
+        android:background="@drawable/curved_line"
+        android:elevation="0dp" />
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="207dp"
-            android:layout_height="wrap_content"
-            android:paddingLeft="0dp"
-            android:paddingTop="-100dp"
-            android:text="Tomato"
-            android:textAlignment="center"
-            android:textSize="17sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="246dp"
-            android:layout_height="wrap_content"
-            android:paddingLeft="-30dp"
-            android:paddingTop="-100dp"
-            android:text="Onion"
-            android:textAlignment="center"
-            android:textSize="17sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>>
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:fillViewport="true"
+            android:background="#FFFFFF">
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/checkBox3"
-            android:layout_width="207dp"
-            android:layout_height="115dp"
-            android:text="Chicken" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:baselineAligned="false"
+                    android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/checkBox4"
-            android:layout_width="206dp"
-            android:layout_height="115dp"
-            android:baselineAligned="false"
-            android:text="Mushroom" />
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="3"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
 
-    </LinearLayout>
+                        <CheckBox
+                            android:id="@+id/checkBox1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:minHeight="48dp" />
+
+                        <ImageView
+                            android:id="@+id/imageView1"
+                            android:layout_width="100dp"
+                            android:layout_height="2000dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:scaleX="1.2"
+                            android:scaleY="1.1"
+                            android:src="@drawable/tomato" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="3"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <CheckBox
+                            android:id="@+id/checkBox2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:minWidth="48dp"
+                            android:minHeight="48dp" />
+
+                        <ImageView
+                            android:id="@+id/imageView2"
+                            android:layout_width="100dp"
+                            android:layout_height="200dp"
+                            android:layout_marginLeft="0dp"
+                            android:layout_marginTop="-10dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:scaleX="1.3"
+                            android:scaleY="1.2"
+                            android:src="@drawable/onion1" />
+
+
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView1"
+                        android:layout_width="207dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="0dp"
+                        android:paddingTop="-100dp"
+                        android:text="Tomato"
+                        android:textAlignment="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="246dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="-30dp"
+                        android:paddingTop="-100dp"
+                        android:text="Onion"
+                        android:textAlignment="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="3"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <CheckBox
+                            android:id="@+id/checkBox3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:minHeight="48dp" />
+
+                        <ImageView
+                            android:id="@+id/imageView3"
+                            android:layout_width="100dp"
+                            android:layout_height="2000dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:scaleX="1.2"
+                            android:scaleY="1.1"
+                            android:src="@drawable/chicken1" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="3"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <CheckBox
+                            android:id="@+id/checkBox4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:minWidth="48dp"
+                            android:minHeight="48dp" />
+
+                        <ImageView
+                            android:id="@+id/imageView4"
+                            android:layout_width="100dp"
+                            android:layout_height="200dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="-10dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:scaleX="1.3"
+                            android:scaleY="1.2"
+                            android:src="@drawable/mushroom1" />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="207dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="0dp"
+                        android:paddingTop="-100dp"
+                        android:text="Chicken"
+                        android:textAlignment="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="246dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="-30dp"
+                        android:paddingTop="-100dp"
+                        android:text="Mushroom"
+                        android:textAlignment="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+
+
+
+            </LinearLayout>
+
+        </ScrollView>
 
     <Button
         android:id="@+id/button"
@@ -124,6 +237,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="See Recipes" />
+
+
+
+
 
 
 </LinearLayout>
