--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,19 @@
         android:background="#00A36C"
         android:orientation="vertical">
 
+        <EditText
+            android:id="@+id/editTextText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="text"
+            android:text="Inventory"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:textSize="50sp"
+            android:textStyle="bold"
+            android:background="@drawable/edit_bg"
+            android:fontFamily="cursive"/>
     </LinearLayout>
 
     <View
@@ -27,7 +40,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.8"
             android:fillViewport="true"
-            android:background="#FFFFFF">
+            android:background="#E5E4E2">
 
 
             <LinearLayout
@@ -224,19 +237,214 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="3"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <CheckBox
+                            android:id="@+id/checkBox5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:minHeight="48dp" />
+
+                        <ImageView
+                            android:id="@+id/imageView5"
+                            android:layout_width="100dp"
+                            android:layout_height="2000dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:scaleX="1.2"
+                            android:scaleY="1.1"
+                            android:layout_marginTop="-5dp"
+                            android:src="@drawable/chilli1" />
 
 
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="3"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <CheckBox
+                            android:id="@+id/checkBox6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:minWidth="48dp"
+                            android:minHeight="48dp" />
+
+                        <ImageView
+                            android:id="@+id/imageView6"
+                            android:layout_width="100dp"
+                            android:layout_height="200dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="0dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:scaleX="1.3"
+                            android:scaleY="1.2"
+                            android:src="@drawable/butter1" />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="207dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="0dp"
+                        android:paddingTop="-100dp"
+                        android:text="Chilli"
+                        android:textAlignment="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="246dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="-30dp"
+                        android:paddingTop="-100dp"
+                        android:text="Butter"
+                        android:textAlignment="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="3"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <CheckBox
+                            android:id="@+id/checkBox7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:minHeight="48dp" />
+
+                        <ImageView
+                            android:id="@+id/imageView7"
+                            android:layout_width="100dp"
+                            android:layout_height="2000dp"
+                            android:layout_marginTop="15dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:scaleX="1.2"
+                            android:scaleY="1.1"
+                            android:src="@drawable/flour1" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="100dp"
+                        android:layout_weight="3"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <CheckBox
+                            android:id="@+id/checkBox8"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:minWidth="48dp"
+                            android:minHeight="48dp" />
+
+                        <ImageView
+                            android:id="@+id/imageView8"
+                            android:layout_width="100dp"
+                            android:layout_height="200dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="0dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:scaleX="1.3"
+                            android:scaleY="1.2"
+                            android:src="@drawable/caps" />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="207dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="0dp"
+                        android:paddingTop="-100dp"
+                        android:text="Flour"
+                        android:textAlignment="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="246dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="-30dp"
+                        android:paddingTop="-100dp"
+                        android:text="Capsicum"
+                        android:textAlignment="center"
+                        android:textSize="17sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="See Recipes"
+                    android:layout_marginTop="40dp"
+                    android:textSize="20sp"
+                    android:fontFamily="casual"
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
-        </ScrollView>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="See Recipes" />
+
+        </ScrollView>
 
 
 
